--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,41 @@
+body {
+    background-color: beige;
+}
+
+
+.user-message {
+    margin-top: 20px;
+}
+
+.battle-wrapper{
+    position: absolute;
+}
+
+
 .hide-icon {
     display: none;
+}
+
+.hidden-icon {
+    visibility: hidden;
+}
+
+.unhide-icon {
+    display: inline;
+}
+
+.chosen-player {
+    min-width: 200px;
+}
+
+.icon {
+    display: inline;
+    background-color: beige;
+
+}
+
+.icon img {
+    height: 100px;
+    width: 100px;
+
 }
